Fix open file and open browser (harmonize calls and make it work on Linux) + Update obsolete links along the way